k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: ms-dev
spec: {}
status: {}
