k8s/dev/flask-k8s-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: flask-k8s-dr
  namespace: ms-dev
spec:
  host: flask-k8s
  # 熔断
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 3
        connectTimeout: 10s
      http:
        http1MaxPendingRequests: 5
        maxRequestsPerConnection: 50
    outlierDetection:
      # 开始拒绝连接的错误个数
      consecutiveErrors: 3
      interval: 3s
      baseEjectionTime: 10s
      maxEjectionPercent: 100
  subsets:
  - name: v1
    labels:
      version: v1
